// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.addCollectStepMutation admin project should be able to add collect step. 1`] = `
Object {
  "addCollectStep": Object {
    "step": Object {
      "__typename": "CollectStep",
      "form": Object {
        "creator": Object {
          "username": "Théo QP",
        },
        "owner": Object {
          "username": "Théo QP",
        },
        "title": "Projet avec administrateur de projet - proposal-form",
      },
      "title": "",
    },
  },
}
`;

exports[`mutations.addCollectStepMutation admin should be able to add collect step. 1`] = `
Object {
  "addCollectStep": Object {
    "step": Object {
      "__typename": "CollectStep",
      "form": Object {
        "creator": Object {
          "username": "admin",
        },
        "owner": Object {
          "username": "admin",
        },
        "title": "Appel à projets - proposal-form",
      },
      "title": "",
    },
  },
}
`;

exports[`mutations.addCollectStepMutation orga member should be able to add collect step. 1`] = `
Object {
  "addCollectStep": Object {
    "step": Object {
      "__typename": "CollectStep",
      "form": Object {
        "creator": Object {
          "username": "Christophe Cassou",
        },
        "owner": Object {
          "username": "GIEC",
        },
        "title": "projectOrgaVisibilityMe - proposal-form",
      },
      "title": "",
    },
  },
}
`;
